[workspace]
resolver = "3"
members = [
    "belt-ctr",
    "cbc",
    "cts",
    "cfb8",
    "cfb-mode",
    "ctr",
    "ige",
    "ofb",
    "pcbc"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# https://github.com/RustCrypto/traits/pull/1998
cipher = { git = "https://github.com/RustCrypto/traits" }
# https://github.com/RustCrypto/utils/pull/1187
# https://github.com/RustCrypto/utils/pull/1207
blobby = { git = "https://github.com/RustCrypto/utils" }
