[workspace]
resolver = "3"
members = [
    "belt-ctr",
    "cbc",
    "cts",
    "cfb8",
    "cfb-mode",
    "ctr",
    "ige",
    "ofb",
    "pcbc"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
crypto-common = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
cipher = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
