[package]
name = "belt-ctr"
version = "0.2.0-rc.0"
description = "CTR block mode of operation specified by the BelT standard"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/belt-ctr"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers", "belt"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = { version = "0.5.0-rc.1", features = ["stream-wrapper"] }
belt-block = "0.2.0-rc.0"

[dev-dependencies]
hex-literal = "1"
belt-block = "0.2.0-rc.0"
cipher = { version = "0.5.0-rc.1", features = ["dev"] }

[features]
alloc = ["cipher/alloc"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
