[package]
name = "belt-ctr"
version = "0.2.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/belt-ctr"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-modes"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers", "belt"]
categories = ["cryptography", "no-std"]
description = "CTR block mode of operation specified by the BelT standard"

[dependencies]
cipher = { version = "0.5.2", features = ["stream-wrapper"] }
belt-block = "0.2"

[dev-dependencies]
cipher = { version = "0.5.2", features = ["dev"] }
hex-literal = "1"

[features]
alloc = ["cipher/alloc"]
zeroize = ["cipher/zeroize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
