[package]
name = "belt-ecb"
version = "0.1.0"
description = "BelT Electronic Codebook (ECB) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/cbc"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "ciphers", "belt"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4"
belt-block = "0.1"

[dev-dependencies]
cipher = { version = "0.4", features = ["dev"] }
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]