[package]
name = "cfb-mode"
version = "0.9.0-rc.3"
description = "Cipher Feedback (CFB) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/cfb-mode"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5"

[dev-dependencies]
aes = "0.9"
belt-block = "0.2"
cipher = { version = "0.5", features = ["dev"] }
hex-literal = "1"

[features]
alloc = ["cipher/alloc"]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
