[package]
name = "cfb8"
version = "0.8.0" # Also update html_root_url in lib.rs when bumping this
description = "Cipher Feedback with eight bit feedback (CFB-8) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/cfb8"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4"

[dev-dependencies]
aes = "0.8"
cipher = { version = "0.4", features = ["dev"] }
hex-literal = "0.3"

[features]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
