[package]
name = "ctr"
version = "0.9.0" # Also update html_root_url in lib.rs when bumping this
description = "CTR block modes of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4"

[dev-dependencies]
aes = "0.8"
magma = "0.8"
kuznyechik = "0.8"
cipher = { version = "0.4", features = ["dev"] }
hex-literal = "0.3"

[features]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
