[package]
name = "ctr"
version = "0.9.2"
description = "CTR block modes of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.2"

[dev-dependencies]
aes = "0.8"
magma = "0.8"
kuznyechik = "0.8"
cipher = { version = "0.4.2", features = ["dev"] }
hex-literal = "0.3.3"

[features]
alloc = ["cipher/alloc"]
std = ["cipher/std", "alloc"]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
