[package]
name = "cts"
version = "0.7.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/cts"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-modes"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "block-mode", "ciphers"]
categories = ["cryptography", "no-std"]
description = "Generic implementation of the ciphertext stealing block modes of operation"

[dependencies]
cipher = "0.5"

[dev-dependencies]
cipher = { version = "0.5", features = ["dev"] }
hex-literal = "1"
aes = "0.9"
belt-block = "0.2"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
