[package]
name = "ofb"
version = "0.7.1"
description = "Output Feedback (OFB) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/ofb"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "stream-cipher", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = { version = "0.5.2", features = ["stream-wrapper"] }

[dev-dependencies]
cipher = { version = "0.5.2", features = ["dev"] }
hex-literal = "1"
aes = "0.9"

[features]
alloc = ["cipher/alloc"]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
