[package]
name = "pcbc"
version = "0.2.0-pre"
description = "Propagating Cipher Block Chaining (PCBC) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/pcbc"
repository = "https://github.com/RustCrypto/block-modes"
keywords = ["crypto", "block-mode", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.8"

[dev-dependencies]
aes = "=0.9.0-pre.2"
cipher = { version = "=0.5.0-pre.8", features = ["dev"] }
hex-literal = "1"

[features]
default = ["block-padding"]
alloc = ["cipher/alloc"]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
